force-app/main/default/objects/Management_Contract__c/Management_Contract__c.object-meta.xml
<CustomObject>
    <description>Agreement between Property Owner and Branch to manage properties.</description>
    <label>Management Contract</label>
    <nameField>
        <label>Management Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>