force-app/main/default/objects/Management_Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date by which the contract must be renewed or become inactive</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>