force-app/main/default/objects/Management_Contract__c/fields/Low_Fee_Approval__c.field-meta.xml
<CustomField>
    <fullName>Low_Fee_Approval__c</fullName>
    <label>Low Fee Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Approved by Regional Manager</fullName>
            </value>
            <value>
                <fullName>Not Approved - Increase Management Fee</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>