force-app/main/default/objects/Management_Contract__c/fields/Reserve_Fund__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Fund__c</fullName>
    <description>Amount required to be held by management company to cover expenses such as maintenance for each property.</description>
    <label>Reserve Fund</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>