force-app/main/default/objects/Management_Contract__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of agreement between property owner and branch</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>