force-app/main/default/objects/Management_Contract__c/listViews/Active_Contracts.listView-meta.xml
<ListView>
    <fullName>Active_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Management_Fee__c</columns>
    <columns>Reserve_Fund__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Contracts</label>
</ListView>