force-app/main/default/objects/Management_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Active__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Management_Fee__c</columns>
    <columns>Reserve_Fund__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>